localization finish and update fix

--- a/lab8/app/src/main/resources/table_en_UK.properties
+++ b/lab8/app/src/main/resources/table_en_UK.properties
@@ -19,6 +19,8 @@ reorderButtonText=Reorder
 shuffleButtonText=Shuffle
 logoutButtonText=Logout
 visualizationButtonText=Visualization
+updateButtonText=Update
+
 
 # Dialog Titles
 addDialogTitle=Add
@@ -31,3 +33,20 @@ removeGreaterTooltip=Remove elements of the collection whose ID field values exc
 addTooltip=Add an element
 reorderTooltip=Reorder the collection
 shuffleTooltip=Shuffle the collection
+updateTooltip=Update an element of collection
+
+#prompts
+idPrompt=Enter id
+
+#fields
+name=Name
+coordinates=Coordinates
+coordinatеsX=X coordinate
+coordinatesY=Y coordinate
+height=Height
+birthday=Birthday
+eyeColor=Eye color
+hairColor=Hair color
+location=Location
+
+cancel=Cancel
